# glibc

./: ChangeLog  Makeconfig  NEWS  README  config.h.in  configure  configure.in  test-skeleton.c
elf/: elf.h  (+9 more)
sysdeps/nds32/: Makefile  ____longjmp_chk.c  __longjmp.S  atomic-machine.h  bsd-_setjmp.S  bsd-setjmp.S  configure  configure.ac  crti.S  crtn.S  dl-machine.h  dl-sysdep.h  dl-tls.h  dl-tlsdesc.S  dl-tlsdesc.h  dl-trampoline.S  fpu_control.h  gccframe.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libm-test-ulps  libm-test-ulps-name  linkmap.h  machine-gmon.h  math-tests.h  math_private.h  memcpy.S  memset.S  memusage.h  nds32-elf.h  preconfigure  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  start.S  strcmp.S  strcpy.S  sysdep.h  (+4 more)
sysdeps/nds32/asm/: param.h
sysdeps/nds32/bits/: atomic.h  endian.h  fenv.h  link.h  linkmap.h  setjmp.h  wordsize.h
sysdeps/nds32/fpu/: e_sqrt.c  e_sqrtf.c  fclrexcpt.c  fedisblxcpt.c  feenablxcpt.c  fegetenv.c  fegetexcept.c  fegetmode.c  fegetround.c  feholdexcpt.c  fenv_libc.h  fenv_private.h  fesetenv.c  fesetexcept.c  fesetmode.c  fesetround.c  feupdateenv.c  fgetexcptflg.c  fix-fp-int-compare-invalid.h  fix-fp-int-convert-overflow.h  fpu_control.h  fraiseexcpt.c  fsetexcptflg.c  ftestexcept.c  get-rounding-mode.h  libm-test-ulps  math-barriers.h
sysdeps/nds32/misc/: glibc_final_testing_result
sysdeps/nds32/nofpu/: libm-test-ulps  libm-test-ulps-name
sysdeps/nds32/nptl/: Makefile  pthread-offsets.h  pthreaddef.h  tcb-offsets.sym  tls.h
sysdeps/nds32/nptl/bits/: pthreadtypes-arch.h  pthreadtypes.h  semaphore.h
(+246 files in other folders)
